# wolf-hotkeyd

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-help.yml  config.yml
.github/workflows/: ci.yml  conventional-commits.yml  docker-image.yml  release-please.yml
actions/: capture-controller-input.sh  capture-game-processes.sh  debug-process-tree.sh  force-close-game.sh  host-force-close-game.sh  install-container-deps.sh  test-action.sh
deploy/steam-hotkeyd-image/: 99-wolf-hotkeyd.sh  Dockerfile
docs/: controller-mapping.md  host-side-mode.md  steam-runner-image.md
examples/: config.force-close.yaml  config.host.yaml  config.yaml
scripts/: check_configs.py  check_text.py
tests/: test_config.py
wolf_hotkeyd/: __init__.py  __main__.py  actions.py  config.py  devices.py  hotkeys.py  main.py
