[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf-hotkeyd"
version = "0.3.0"
description = "Controller hotkey daemon for Wolf Steam containers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["wolf", "moonlight", "steam", "controller", "hotkey", "evdev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "evdev>=1.7,<2",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1",
]

[project.scripts]
wolf-hotkeyd = "wolf_hotkeyd.main:main"

[tool.setuptools.packages.find]
include = ["wolf_hotkeyd*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
